--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7df1afb961.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/gkr8zqh.css">
     <link href="style.css" rel="stylesheet" />
-
     <title>FireStix</title>
 </head>
 
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div class="menu">
-                <div><a href="#"><span>About</span></a></div>
+                <div><a href="#about"><span>About</span></a></div>
                 <div><a href="#"><span>Shop</span></a></div>
                 <div><a href="#"><span>Contact</span></a></div>
                 <div class="social">
@@ -65,14 +65,68 @@
             <div></div>
             <div></div>
         </div>
-        <footer>
-            <div>
-                <a>
+        <footer class="bg-black">
+            <a href="#about">
+                <div>
                     <picture>
                         <img src="img/scrolldown.png">
                     </picture>
+                </div>
+            </a>
+        </footer>
+    </section>
+    <section id="about">
+        <div class="top">
+            <div>
+                <picture>
+                    <img src="img/slogan-red.png" alt="" srcset="" />
+                </picture>
+
+            </div>
+        </div>
+        <div class="yellow">
+
+            <div><video controls autoplay muted>
+                    <source src="img/01.MP4" type="video/mp4">
+                 </video>
+            </div>
+            <div>
+                <div>
+                    <ul>
+                        <li>Replaces kindling and is a little bundle of Firewood.</li>
+                        <li>Unique all natural fire starter sticks (Pine wood, candle wick and wax), no harmful chemicals, easy to light.</li>
+                        <li>Quickly ignites outdoor camp fires, charcoal and outdoor bbq's, fireplaces, outdoor pizza ovens, wood and pellet stoves.</li>
+                        <li>Convenient to take camping, hiking, ATV trips, snowmobiling, fishing, hunting or at home for indoor fireplace or back yard bonfires.</li>
+                        <li>Just light the 2 ends of the candle wicks and place under dry wood and watch your fire burn!</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div>
+                <a href="/">
+                    <picture>
+                        <img src="img/logo.png" alt="FireStix logo">
+                    </picture>
                 </a>
             </div>
+            <div>
+                <div><a href="#about"><span>About</span></a></div>
+                <div><a href="#"><span>Shop</span></a></div>
+                <div><a href="#"><span>Contact</span></a></div>
+
+            </div>
+            <div>FAQ</div>
+            <div>
+                <div class="social">
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#"><i class="fa-solid fa-pipe"></i></a>
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
         </footer>
     </section>
 </body>
