--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="menu">
                 <div><a href="#about"><span>About</span></a></div>
-                <div><a href="#"><span>Shop</span></a></div>
+                <div><a href="#shop"><span>Shop</span></a></div>
                 <div><a href="#"><span>Contact</span></a></div>
                 <div class="social">
                     <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
@@ -103,7 +103,29 @@
                 </div>
             </div>
         </div>
-        <footer>
+    </section>
+    <section id="shop">
+        <picture>
+            <img src="img/productos.png" alt="" srcset="">
+        </picture>
+    </section>
+    <section id="news">
+        <div>
+            <form>
+                <h3>New news & offers in your inbox</h3>
+                <h1>
+                    Join our newsletter for 10% off your firsy order
+                </h1>
+                <div>
+                    <input type="email" name="email" placeholder="Enter your email address..." id="">
+                </div>
+                <div><input type="button" value="suscribe"></div>
+            </form>
+
+        </div>
+    </section>
+    <footer>
+        <div class="menu">
             <div>
                 <a href="/">
                     <picture>
@@ -113,22 +135,23 @@
             </div>
             <div>
                 <div><a href="#about"><span>About</span></a></div>
-                <div><a href="#"><span>Shop</span></a></div>
+                <div><a href="#shop"><span>Shop</span></a></div>
                 <div><a href="#"><span>Contact</span></a></div>
 
             </div>
-            <div>FAQ</div>
-            <div>
-                <div class="social">
-                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="#"><i class="fa-solid fa-pipe"></i></a>
-                    <a href="#"><i class="fa-solid fa-bars"></i></a>
-                </div>
-            </div>
+            <div><a href="#">FAQ</a></div>
+        </div>
 
-        </footer>
-    </section>
+        <div>
+            <div class="social">
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-solid fa-pipe"></i></a>
+                <a href="#"><i class="fa-solid fa-bars"></i></a>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
