--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="menu">
                 <div><a href="#about"><span>About</span></a></div>
                 <div><a href="#shop"><span>Shop</span></a></div>
-                <div><a href="#"><span>Contact</span></a></div>
+                <div><a href="#Contact"><span>Contact</span></a></div>
                 <div class="social">
-                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="https://www.facebook.com/Firestixstart/"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://www.instagram.com/firestixstart/"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#"><i class="fa-solid fa-pipe"></i></a>
                     <a href="#"><i class="fa-solid fa-bars"></i></a>
                 </div>
@@ -45,10 +45,8 @@
                 </picture>
             </div>
             <div>
-                <a>
-                    <picture>
-                        <img src="img/shopnow.png" alt="" srcset="">
-                    </picture>
+                <a href="#shop">
+                    <input class="shopnow" type="button" value="OUR PRODUCT" /></span>
                 </a>
             </div>
             <div>
@@ -133,13 +131,33 @@
                     </picture>
                 </a>
             </div>
-            <div>
-                <div><a href="#about"><span>About</span></a></div>
-                <div><a href="#shop"><span>Shop</span></a></div>
-                <div><a href="#"><span>Contact</span></a></div>
-
+            <div id="Contact">
+                <div>
+                    <h2>Contact</h2>
+                </div>
+                <table>
+                    <tr>
+                        <td>Rory Coppock</td>
+                        <td>
+                            <a href="mailto:rory@firestixstart.com">rory@firestixstart.com</a></td>
+                        <td><a href="tel:407-574-9543">407-574-9543</a></td>
+                    </tr>
+                    <tr>
+                        <td>Troy Coppock</td>
+                        <td>
+                            <a href="mailto:troy@firestixstart.com">troy@firestixstart.com</a></td>
+                        <td><a href="tel:321-946-3468">321-946-3468</td>
+                    </tr>
+                    <tr>
+                        <td>Bruce Hannan</td>
+                        <td><a href="mailto:bruce@firestixstart.com">bruce@firestixstart.com</a></td>
+                        <td><a href="tel:306-460-5515">306-460-5515</a></td>
+                    </tr>
+                </table>
             </div>
-            <div><a href="#">FAQ</a></div>
+            <div>
+                <a href="#"></a>
+            </div>
         </div>
 
         <div>
