--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     </section>
     <section id="shop">
         <picture>
+            <source media="(max-width: 768px)" srcset="img/product-md.png">
             <img src="img/productos.png" alt="" srcset="">
         </picture>
     </section>
@@ -112,20 +113,19 @@
             <form>
                 <h3>New news & offers in your inbox</h3>
                 <h1>
-                    Join our newsletter for 10% off your firsy order
+                    Join our newsletter
                 </h1>
                 <div>
                     <input type="email" name="email" placeholder="Enter your email address..." id="">
                 </div>
-                <div><input type="button" value="suscribe"></div>
+                <div><input type="button" value="subscribe"></div>
             </form>
-
         </div>
     </section>
     <footer>
         <div class="menu">
             <div>
-                <a href="/">
+                <a href="#">
                     <picture>
                         <img src="img/logo.png" alt="FireStix logo">
                     </picture>
@@ -159,11 +159,10 @@
                 <a href="#"></a>
             </div>
         </div>
-
         <div>
             <div class="social">
-                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://www.facebook.com/Firestixstart/"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/firestixstart/"><i class="fa-brands fa-square-instagram"></i></a>
                 <a href="#"><i class="fa-solid fa-pipe"></i></a>
                 <a href="#"><i class="fa-solid fa-bars"></i></a>
             </div>
