cambios de texto

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <div>
                     <ul>
                         <li>Replaces kindling and is a little bundle of Firewood.</li>
-                        <li>Unique all natural fire starter sticks (Pine wood, candle wick and wax), no harmful chemicals, easy to light.</li>
-                        <li>Quickly ignites outdoor camp fires, charcoal and outdoor bbq's, fireplaces, outdoor pizza ovens, wood and pellet stoves.</li>
-                        <li>Convenient to take camping, hiking, ATV trips, snowmobiling, fishing, hunting or at home for indoor fireplace or back yard bonfires.</li>
-                        <li>Just light the 2 ends of the candle wicks and place under dry wood and watch your fire burn!</li>
+                        <li>Unique all natural fire starter (Pine wood, a candle wick and paraffin wax). No harmful chemicals, easy to light.</li>
+                        <li>Quickly ignites outdoor camp fires, charcoal and outdoor bbq’s, fireplaces, outdoor pizza ovens, wood and pellet stoves.</li>
+                        <li>Convenient to take camping, hiking, ATV trips, snowmobiling, fishing, hunting or at home for indoor fireplace or backyard bonfires.</li>
+                        <li>Just light the 2 ends of the candle wicks, place dry wood on top and watch your fire burn!</li>
 
                     </ul>
                 </div>
