latest email requests about style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="home">
         <header>
             <div class="logo">
-                <a href="/">
+                <a href="https://firestixstart.com">
                     <picture>
                         <img src="img/logo.png" alt="FireStix logo">
                     </picture>
@@ -25,6 +25,7 @@
                 <div><a href="#about"><span>About</span></a></div>
                 <div><a href="#shop"><span>Shop</span></a></div>
                 <div><a href="#Contact"><span>Contact</span></a></div>
+                <div><a href="#moreaboutus"><span>FAQ</span></a></div>
                 <div class="social">
                     <a href="https://www.facebook.com/Firestixstart/"><i class="fa-brands fa-square-facebook"></i></a>
                     <a href="https://www.instagram.com/firestixstart/"><i class="fa-brands fa-square-instagram"></i></a>
@@ -92,6 +93,59 @@
 
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="moreaboutus">
+        <div class="top-yellow"></div>
+        <div class="testimonial-list">
+            <div class="testimonial">
+                <img src="img/tes_frame.png">
+                <div class="quote">Gone are the days of bring out the gas can to get the fire started!</div>
+                <div class="author">Jarod B.</div>
+            </div>
+            <div class="testimonial">
+                <img src="img/tes_frame.png">
+                <div class="quote">FIRESTIX saves us from having to search the woods at night for twigs for kindling. Thanks Firestix.</div>
+                <div class="author"> Paul T.</div>
+            </div>
+            <div class="testimonial">
+                <img src="img/tes_frame.png">
+
+                <div class="quote f-small">Picked up a bundle of the Firestix at the gas station. Very simple and got our fire going fast, bought the rest of the box of them on our way back home.
+                </div>
+
+                <div class="author">Barry S.</div>
+            </div>
+            <div class="testimonial">
+                <img src="img/tes_frame.png">
+                <div class="quote f-small">
+                    We do a lot of kayaking and often camp out on the river. Firestix even works on damp wood to get the fire going.
+                </div>
+                <div class="author">Stephen K.</div>
+            </div>
+            <div class="testimonial">
+                <img src="img/tes_frame.png">
+
+                <div class="quote">
+                    We do a lot of kayaking and often camp out on the river. Firestix even works on damp wood to get the fire going.
+                </div>
+                <div class="author">Samantha P.</div>
+
+            </div>
+        </div>
+        <div id="FAQ">
+            <div><strong>FAQ</strong></div>
+            <div>
+                As longtime friends and avid outdoorsman with entrepreneurial histories, we were always brainstorming ideas on our hikes, on the boat and of course around the fire.
+                <br><br>We had been biking all day and were camped out on a secluded beach on the west coast. After setting up camp our next goal was to find dry wood to have a bonfire. We had to search quite a while until we had each collected enough
+                small twigs and kindling to combine into a bundle that would get the fire started and from there, that evening, FIRE STIX was created.
+                <br><br>The founders are identical twin brothers Troy and Rory Coppock and long time friend Bruce Hannan. We all grew up as Boy Scouts and spent tons of time overnights during canoe trips, hiking trips, camping and fishing trips. Troy
+                and Rory also lived in the bush, for 2 months at a time, tree planting for 5 years.
+                <br><br>&quot;One thing we&#39;d learnt is fire, in addition to sitting around and enjoying,  is also a necessity for cooking and keeping warm. We realized a lot of people do not spend a lot of time in the outdoors and are uncertain the
+                best way to start a fire. We have  simplified starting a fire rather then struggling to get it going with FIRESTIX.
+                <br><br>
+                <p><strong>FIRESTIX – “The Easiest Way to Start a Fire”</strong> </p>
             </div>
         </div>
     </section>
