--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         </div>
     </section>
     <footer>
+        <div>
         <div class="menu">
             <div>
                 <a href="#">
@@ -214,7 +215,10 @@
                 <a href="#"><i class="fa-solid fa-bars"></i></a>
             </div>
         </div>
-
+    </div>
+    <div>
+       <span>© 2022 firestixstart</span> 
+    </div>
     </footer>
     <script type="text/javascript">
         function chgAction() {
