--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div><a href="#about"><span>About</span></a></div>
                 <div><a href="#shop"><span>Shop</span></a></div>
                 <div><a href="#Contact"><span>Contact</span></a></div>
-                <div><a href="#moreaboutus"><span>FAQ</span></a></div>
+                <div><a href="#moreaboutus"><span>Story</span></a></div>
                 <div class="social">
                     <a href="https://www.facebook.com/Firestixstart/"><i class="fa-brands fa-square-facebook"></i></a>
                     <a href="https://www.instagram.com/firestixstart/"><i class="fa-brands fa-square-instagram"></i></a>
@@ -134,8 +134,8 @@
 
             </div>
         </div>
-        <div id="FAQ">
-            <div><strong>FAQ</strong></div>
+        <div id="Story">
+            <div><strong>Story</strong></div>
             <div>
                 As longtime friends and avid outdoorsman with entrepreneurial histories, we were always brainstorming ideas on our hikes, on the boat and of course around the fire.
                 <br><br>We had been biking all day and were camped out on a secluded beach on the west coast. After setting up camp our next goal was to find dry wood to have a bonfire. We had to search quite a while until we had each collected enough
@@ -150,10 +150,308 @@
         </div>
     </section>
     <section id="shop">
-        <picture>
-            <source media="(max-width: 768px)" srcset="img/product-md.png">
-            <img src="img/productos.png" alt="" srcset="">
-        </picture>
+        <div id='product-component-1668578642337'></div>
+        <script type="text/javascript">
+        /*<![CDATA[*/
+        (function () {
+          var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+          if (window.ShopifyBuy) {
+            if (window.ShopifyBuy.UI) {
+              ShopifyBuyInit();
+            } else {
+              loadScript();
+            }
+          } else {
+            loadScript();
+          }
+          function loadScript() {
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = scriptURL;
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+            script.onload = ShopifyBuyInit;
+          }
+          function ShopifyBuyInit() {
+            var client = ShopifyBuy.buildClient({
+              domain: 'firestixstart-6482.myshopify.com',
+              storefrontAccessToken: '31681bdce55d363aadac528747173522',
+            });
+            ShopifyBuy.UI.onReady(client).then(function (ui) {
+              ui.createComponent('product', {
+                id: '7979577737506',
+                node: document.getElementById('product-component-1668578642337'),
+                moneyFormat: '%24%7B%7Bamount%7D%7D',
+                options: {
+          "product": {
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "calc(25% - 20px)",
+                  "margin-left": "20px",
+                  "margin-bottom": "50px"
+                }
+              },
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "text": {
+              "button": "Add to cart"
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          },
+          "productSet": {
+            "styles": {
+              "products": {
+                "@media (min-width: 601px)": {
+                  "margin-left": "-20px"
+                }
+              }
+            }
+          },
+          "modalProduct": {
+            "contents": {
+              "img": false,
+              "imgWithCarousel": true,
+              "button": false,
+              "buttonWithQuantity": true
+            },
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "100%",
+                  "margin-left": "0px",
+                  "margin-bottom": "0px"
+                }
+              },
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "googleFonts": [
+              "Montserrat"
+            ],
+            "text": {
+              "button": "Add to cart"
+            }
+          },
+          "option": {},
+          "cart": {
+            "styles": {
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "text": {
+              "total": "Subtotal",
+              "button": "Checkout"
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          },
+          "toggle": {
+            "styles": {
+              "toggle": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                "background-color": "#ff5203",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          }
+        },
+              });
+            });
+          }
+        })();
+        /*]]>*/
+        </script>
+        <div id='product-component-1668578291896'></div>
+        <script type="text/javascript">
+        /*<![CDATA[*/
+        (function () {
+          var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+          if (window.ShopifyBuy) {
+            if (window.ShopifyBuy.UI) {
+              ShopifyBuyInit();
+            } else {
+              loadScript();
+            }
+          } else {
+            loadScript();
+          }
+          function loadScript() {
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = scriptURL;
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+            script.onload = ShopifyBuyInit;
+          }
+          function ShopifyBuyInit() {
+            var client = ShopifyBuy.buildClient({
+              domain: 'firestixstart-6482.myshopify.com',
+              storefrontAccessToken: '31681bdce55d363aadac528747173522',
+            });
+            ShopifyBuy.UI.onReady(client).then(function (ui) {
+              ui.createComponent('product', {
+                id: '7979577835810',
+                node: document.getElementById('product-component-1668578291896'),
+                moneyFormat: '%24%7B%7Bamount%7D%7D',
+                options: {
+          "product": {
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "calc(25% - 20px)",
+                  "margin-left": "20px",
+                  "margin-bottom": "50px"
+                }
+              },
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "text": {
+              "button": "Add to cart"
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          },
+          "productSet": {
+            "styles": {
+              "products": {
+                "@media (min-width: 601px)": {
+                  "margin-left": "-20px"
+                }
+              }
+            }
+          },
+          "modalProduct": {
+            "contents": {
+              "img": false,
+              "imgWithCarousel": true,
+              "button": false,
+              "buttonWithQuantity": true
+            },
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "100%",
+                  "margin-left": "0px",
+                  "margin-bottom": "0px"
+                }
+              },
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "googleFonts": [
+              "Montserrat"
+            ],
+            "text": {
+              "button": "Add to cart"
+            }
+          },
+          "option": {},
+          "cart": {
+            "styles": {
+              "button": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                "background-color": "#ff5203",
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "text": {
+              "total": "Subtotal",
+              "button": "Checkout"
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          },
+          "toggle": {
+            "styles": {
+              "toggle": {
+                "font-family": "Montserrat, sans-serif",
+                "font-weight": "bold",
+                "background-color": "#ff5203",
+                ":hover": {
+                  "background-color": "#e64a03"
+                },
+                ":focus": {
+                  "background-color": "#e64a03"
+                }
+              }
+            },
+            "googleFonts": [
+              "Montserrat"
+            ]
+          }
+        },
+              });
+            });
+          }
+        })();
+        /*]]>*/
+        </script>
     </section>
     <section id="news">
         <div>
@@ -217,7 +515,7 @@
         </div>
     </div>
     <div>
-       <span>© 2022 firestixstart</span> 
+       <span>© firestixstart 2022.</span> 
     </div>
     </footer>
     <script type="text/javascript">
